--- a/src/Global/ScrollBar.css
+++ b/src/Global/ScrollBar.css
@@ -14,6 +14,6 @@
   background: #ffe1a5;
 }
 html {
-  scrollbar-color: rgb(255, 250, 201) #0a0a0a;
+  scrollbar-color: rgb(255, 250, 201) #62f9d5;
   scrollbar-width: thin;
 }
